[gd_scene load_steps=14 format=2]

[ext_resource path="res://visuals/circle_bubble_inner.png" type="Texture" id=1]
[ext_resource path="res://scenes/gamepad.gd" type="Script" id=2]
[ext_resource path="res://visuals/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/WSClient.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=2]
size = 72
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.866667, 0.207843, 0.207843, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.231373, 0.231373, 0.231373, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.866667, 0.207843, 0.207843, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.866667, 0.207843, 0.207843, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=7]
size = 72
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.13711, 0.13711, 0.13711, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Gamepad" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -700.0
margin_top = -107.5
margin_right = 700.0
margin_bottom = 107.5
rect_pivot_offset = Vector2( 700, 107 )
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="circle_bubble_inner" type="Sprite" parent="Label"]
position = Vector2( 700, 107 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 103.0
custom_constants/margin_right = 20
custom_constants/margin_left = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_right = 1900.0
margin_bottom = 103.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer"]
margin_top = 9.0
margin_right = 377.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 2 )
text = "SERVER IP: "
align = 1
valign = 1

[node name="ServerIP" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 381.0
margin_top = 9.0
margin_right = 381.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 385.0
margin_right = 1043.0
margin_bottom = 103.0
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 1047.0
margin_top = 9.0
margin_right = 1348.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 2 )
text = "STATUS: "
align = 1
valign = 1

[node name="Status" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 1352.0
margin_top = 9.0
margin_right = 1880.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 2 )
text = "DISCONNECTED"
align = 1
valign = 1

[node name="FireBtn" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -596.0
margin_top = -361.0
margin_right = -41.0
margin_bottom = -36.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "FIRE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connection" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Connection"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Connection"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -276.0
margin_top = -188.0
margin_right = 276.0
margin_bottom = 188.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Connection/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.180392, 0.180392, 0.180392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Connection/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Connection/Control/VBoxContainer"]
margin_right = 552.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 2 )
text = "SERVER IP"
align = 1
valign = 1

[node name="TextEdit" type="TextEdit" parent="Connection/Control/VBoxContainer"]
margin_top = 89.0
margin_right = 552.0
margin_bottom = 179.0
rect_min_size = Vector2( 0, 90 )
size_flags_horizontal = 3
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 2 )
text = "192.168.31.214"

[node name="ConnectBtn" type="Button" parent="Connection/Control/VBoxContainer"]
margin_top = 183.0
margin_right = 552.0
margin_bottom = 376.0
size_flags_vertical = 3
custom_styles/focus = SubResource( 9 )
custom_fonts/font = SubResource( 2 )
text = "CONNECT"

[node name="WSClient" type="Node" parent="."]
script = ExtResource( 4 )

[connection signal="pressed" from="FireBtn" to="." method="_on_FireBtn_pressed"]
[connection signal="pressed" from="Connection/Control/VBoxContainer/ConnectBtn" to="." method="_on_ConnectBtn_pressed"]
[connection signal="connected" from="WSClient" to="." method="_on_WSClient_connected"]
[connection signal="disconnected" from="WSClient" to="." method="_on_WSClient_disconnected"]
